--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
 
       <script>
-        var App, Search, Gif
+        var app, search, gif
       </script>
-      <script type="text/babel" src="components/Search.js"></script>
-      <script type="text/babel" src="components/Gif.js"></script>
-      <script type="text/babel" src="components/App.js"></script>
+      <script type="text/babel" src="components/search.js"></script>
+      <script type="text/babel" src="components/gif.js"></script>
+      <script type="text/babel" src="components/app.js"></script>
       <script type="text/babel" src="script.js"></script>
   </body>
 </html>
