--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <script>
         var app, search, gif
       </script>
-      <script type="text/babel" src="components/search.js"></script>
-      <script type="text/babel" src="components/gif.js"></script>
-      <script type="text/babel" src="components/app.js"></script>
+      <script type="text/babel" src="components/Search.js"></script>
+      <script type="text/babel" src="components/Gif.js"></script>
+      <script type="text/babel" src="components/App.js"></script>
       <script type="text/babel" src="script.js"></script>
   </body>
 </html>
