--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
 
       <script>
-        var app, search, gif
+        var App, Search, Gif
       </script>
       <script type="text/babel" src="components/Search.js"></script>
       <script type="text/babel" src="components/Gif.js"></script>
